<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="loginViewModel"
            type="com.foysal.practice.hrmfinal.login.LoginViewModel" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/loginConstraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context = "login.LoginFragment">
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:background="@drawable/login_screen_bg"
            >
            <TextView
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginStart="25dp"
                android:layout_marginTop="150dp"
                android:text="@string/login_page"
                android:textColor="@color/black"
                android:textSize="35sp"
                android:textStyle="bold" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_page_message"
                android:layout_marginStart="25dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="25dp"
                android:textColor="@color/txt_color_grey"
                android:textStyle="normal"
                android:layout_gravity="start"
                android:textSize="15sp"
                />
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                app:cardBackgroundColor="@color/login_card_bg"
                app:cardCornerRadius="10dp"
                android:elevation="10dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="20dp">
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:textColorHint="@color/txt_color_grey"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="2dp"
                        app:endIconMode="clear_text">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/login_id"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@={loginViewModel.inputUsername}"
                            android:layout_gravity="center_horizontal"
                            android:drawableStart="@drawable/ic_id"
                            android:drawablePadding="10dp"
                            android:hint="@string/login_page_ID"
                            tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:orientation="vertical"
                        android:textColorHint="@color/txt_color_grey"
                        app:boxStrokeColor="@color/black"
                        app:boxStrokeWidth="2dp"
                        app:endIconMode="password_toggle">
                        <androidx.appcompat.widget.AppCompatEditText
                            android:id="@+id/login_pass"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:drawableStart="@drawable/ic_password"
                            android:text="@={loginViewModel.inputPassword}"
                            android:drawablePadding="10dp"
                            android:hint="@string/login_page_pass"
                            android:inputType="textPassword"
                            app:hintTextColor="@color/black"
                            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck,TouchTargetSizeCheck" />
                    </com.google.android.material.textfield.TextInputLayout>
                    <androidx.appcompat.widget.AppCompatButton
                        android:id="@+id/btn_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="5dp"
                        android:background="@drawable/custom_button"
                        android:drawableEnd="@drawable/login_arrow"
                        android:onClick="@{()-> loginViewModel.loginButton()}"
                        android:drawablePadding="5dp"
                        android:padding="10dp"
                        android:text="@string/login"
                        android:textColor="@color/txt_color_grey"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        tools:ignore="DuplicateSpeakableTextCheck">
                    </androidx.appcompat.widget.AppCompatButton>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1" />
                <androidx.appcompat.widget.AppCompatTextView
                    android:padding="10dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/white_services_technology"
                    android:gravity="center|bottom"
                    android:textColor="@color/txt_color_grey"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
